--- a/src/styles/TodoList.module.css
+++ b/src/styles/TodoList.module.css
@@ -8,13 +8,21 @@
 }
 
 input[type="text"].itemInput {
-  width: 100%;
+  width: 40%;
   padding: 5px;
   margin-bottom: 10px;
+  margin-right: 10px;
+}
+
+input[type="date"].itemInput {
+  width: 40%;
+  padding: 5px;
+  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 button.addButton {
-  padding: 5px;
+  padding: 7px;
   background-color: #0070f3;
   color: white;
   border: 1px solid #0070f3;
